# pyshock

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  publish.yml
src/pyshock/: __init__.py  constants.py  errors.py  openshockapi.py  pishockapi.py  protocols.py  providers.py
src/pyshock/cli/: __init__.py  __main__.py  config.py  context.py  display.py  main.py  share_code.py  utils.py
src/pyshock/cli/commands/: __init__.py  code.py  init_creds.py  meta.py  shocker.py
src/pyshock/models/: __init__.py  account.py  operation.py  shocker.py
tests/: __init__.py  conftest.py  mockapi.py  test_models.py  test_openshockapi.py  test_openshockapi_cookie.py  test_pishockapi.py  test_utils_multi.py
tests/cli/: conftest.py  test_auth.py  test_code.py  test_config.py  test_init_helpers.py  test_integration.py  test_launcher.py  test_meta_commands.py  test_parse.py  test_share_code.py  test_shocker.py  test_utils.py  test_utils_multi.py
