[project]
name = "pyshock"
version = "0.1.1"
description = "An up to date implementation of the PiShock and OpenShock APIs in Python. Includes functionality as a library and as a command line program."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{ name = "jwinpbe", email = "jwin_pbe@proton.me" }]
requires-python = ">=3.10"
dependencies = ["niquests>=3.18.6"]
keywords = ["pishock", "openshock", "iot", "remote-control", "hardware"]
license-files = ["LICENSE", "COPYING"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/jwinpbe/pyshock"
Issues = "https://github.com/jwinpbe/pyshock/issues"

[project.optional-dependencies]
cli = ["cyclopts>=4.10.2", "platformdirs>=4.9.6", "rich>=13.0"]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "commitizen>=4.13.10",
  "prek>=0.3.9",
  "pyrefly>=0.61.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.0.0",
  "ruff>=0.15.10",
]

[project.scripts]
pyshock = "pyshock.cli.__main__:main"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["tests", "analyze_ruff_rules.py"]
preview = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "UP",
  "YTT",
  "ANN",
  "S",
  "B",
  "C4",
  "SIM",
  "PTH",
  "RUF",
  "PERF",
  "BLE",
  "T20",
  "ERA",
  "TCH",
  "ARG",
  "FBT",
  "RET",
  "PLR0913",
  "PLR0915",
  "PLR1711",
  "PLR1733",
  "PLR1736",
  "PLR2004",
  "FURB",
]
ignore = ["ANN002", "ANN003", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"src/pyshock/__init__.py" = ["RUF067"]
"tests/*" = ["ANN", "S", "B", "SIM", "PLR2004", "TC001", "TC003", "PLR0913", "BLE001", "ARG005", "FBT"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-nested-blocks = 3

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
docstring-code-format = true

[tool.coverage.run]
source = ["pyshock"]
branch = true
omit = [
    "src/pyshock/cli/__main__.py",
    "src/pyshock/cli/display.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pytest.ini_options]
addopts = ["-W error"]
